Fix for login image overflowing the login form.

--- a/themes/suiteresponsive/css/style.css
+++ b/themes/suiteresponsive/css/style.css
@@ -3957,6 +3957,11 @@ ol, ul, dl {
     -moz-border-radius: 5px;
     border-radius: 5px;
 }
+
+.form-signin img{
+    max-width:95% !important;
+}
+
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
     margin-bottom: 10px;
@@ -4913,4 +4918,6 @@ a[id^=grouptab]:visited, a[id^=grouptab]:active{
 ul.navbar-nav li:hover{
     background:#337ab7 !important;
 }
+
+
 /* End Global CSS */
